# dl4ds-spring-2025-midterm-challenge-ethanc-ec

./: .gitignore  README.md  eval_cifar100.py  eval_ood.py  pyproject.toml  simple_cnn.py  soph_cnn.py  starter_code.py  transfer_cnn.py  utils.py
